# bank-challenge-ml-project

./: .gitignore  Dockerfile  README.md  app.py  client_test.py  cv_results.json  eda.ipynb  front.py  model_build.py  pyproject.toml  rfe_results.json  testing_env.py
artifacts/: model_20240622.pkl  model_20240625.pkl  model_20240627.pkl
src/: data_preprocessing.py  extract_load_bigquery.py  initial_ingestion.py  model_definition.py
